--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/client/index.html" }
+    { "source": "/api/(.*)", "destination": "/server/api/projects.js" },  
+    { "source": "/(.*)", "destination": "/client/public/index.html" } 
   ],
   "builds": [
-    { "src": "server/api/index.js", "use": "@vercel/node" },
+    { "src": "server/routes/projects.js", "use": "@vercel/node" },
     { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "client/build" } }
   ]
 }
