--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/server/app.js" },  
-    { "source": "/(.*)", "destination": "/client/public/index.html" } 
+    { "source": "/(.*)", "destination": "/client/build/index.html" } 
   ],
   "builds": [
     { "src": "server/app.js", "use": "@vercel/node" },
